--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.17",
     "mathjs": "^15.1.0",
     "react": "^19.2.0",
