--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
+    "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.17",
     "chart.js": "^4.5.1",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "mathjs": "^15.1.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
